--- a/samples/sample_01_add/Makefile
+++ b/samples/sample_01_add/Makefile
@@ -7,35 +7,14 @@ ifndef GMP_HOME
   LIB :=
 endif
 
-pick:
-	@echo
-	@echo Please run one of the following:
-	@echo "   make kepler"
-	@echo "   make maxwell"
-	@echo "   make pascal"
-	@echo "   make volta"
-	@echo "   make turing"
-	@echo "   make ampere"
-	@echo
+SRCFILE := add.cu
+TARGET := add
 
+all: $(TARGET)
+
+.PHONY: clean
 clean:
-	rm -f add
+	rm -f $(TARGET)
 
-kepler:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_35 add.cu -o add -lgmp
-
-maxwell:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_50 add.cu -o add -lgmp
-
-pascal:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_60 add.cu -o add -lgmp
-
-volta: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_70 add.cu -o add -lgmp
-
-turing: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_75 add.cu -o add -lgmp
-
-ampere: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_80 add.cu -o add -lgmp
-
+$(TARGET): $(SRCFILE)
+	nvcc $(INC) $(LIB) -I../../include -arch=sm_$(CUDA_GENCODE) $(SRCFILE) -o $(TARGET) -lgmp
