--- a/samples/sample_04_miller_rabin/Makefile
+++ b/samples/sample_04_miller_rabin/Makefile
@@ -7,35 +7,14 @@ ifndef GMP_HOME
   LIB :=
 endif
 
-pick:
-	@echo
-	@echo Please run one of the following:
-	@echo "   make kepler"
-	@echo "   make maxwell"
-	@echo "   make pascal"
-	@echo "   make volta"
-	@echo "   make turing"
-	@echo "   make ampere"
-	@echo
+TARGET := mr
+SRCFILE := miller_rabin.cu
 
+all: $(TARGET)
+
+.PHONY: clean
 clean:
-	rm -f mr
+	rm -f $(TARGET)
 
-kepler:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_35 miller_rabin.cu -o mr -lgmp
-
-maxwell:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_50 miller_rabin.cu -o mr -lgmp
-
-pascal:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_60 miller_rabin.cu -o mr -lgmp
-
-volta: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_70 miller_rabin.cu -o mr -lgmp
-
-turing: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_75 miller_rabin.cu -o mr -lgmp
-
-ampere: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_80 miller_rabin.cu -o mr -lgmp
-
+$(TARGET): $(SRCFILE)
+	nvcc $(INC) $(LIB) -I../../include -arch=sm_$(CUDA_GENCODE) $< -o $@ -lgmp
