--- a/perf_tests/Makefile
+++ b/perf_tests/Makefile
@@ -1,4 +1,4 @@
-.PHONY: pick clean gmp-run gmp-numactl-run xmp-run kepler maxwell pascal volta turing ampere
+.PHONY: clean gmp-run gmp-numactl-run xmp-run
 
 ifdef GMP_HOME
   INC := -I$(GMP_HOME)/include
@@ -9,16 +9,7 @@ ifndef GMP_HOME
   LIB :=
 endif
 
-pick:
-	@echo
-	@echo Please run one of the following:
-	@echo "   make kepler"
-	@echo "   make maxwell"
-	@echo "   make pascal"
-	@echo "   make volta"
-	@echo "   make turing"
-	@echo "   make ampere"
-	@echo
+all: gmp_tester xmp_tester
 
 clean:
 	rm -f xmp_tester gmp_tester
@@ -36,31 +27,4 @@ gmp_tester:
 	g++ $(INC) $(LIB) gmp_tester.cc -o gmp_tester -lgmp -fopenmp
 
 xmp_tester: 
-	@echo
-	@echo Please run one of the following:
-	@echo "   make kepler"
-	@echo "   make maxwell"
-	@echo "   make pascal"
-	@echo "   make volta"
-	@echo
-	@exit 0
-
-
-kepler:
-	nvcc $(INC) $(LIB) -I../include -arch=sm_35 xmp_tester.cu -o xmp_tester -lgmp
-
-maxwell:
-	nvcc $(INC) $(LIB) -I../include -arch=sm_50 xmp_tester.cu -o xmp_tester -lgmp
-
-pascal:
-	nvcc $(INC) $(LIB) -I../include -arch=sm_60 xmp_tester.cu -o xmp_tester -lgmp
-
-volta:
-	nvcc $(INC) $(LIB) -I../include -arch=sm_70 xmp_tester.cu -o xmp_tester -lgmp
-
-turing:
-	nvcc $(INC) $(LIB) -I../include -arch=sm_75 xmp_tester.cu -o xmp_tester -lgmp
-
-ampere:
-	nvcc $(INC) $(LIB) -I../include -arch=sm_80 xmp_tester.cu -o xmp_tester -lgmp
-
+	nvcc $(INC) $(LIB) -I../include -arch=sm_$(CUDA_GENCODE) xmp_tester.cu -o xmp_tester -lgmp
