--- a/samples/Makefile
+++ b/samples/Makefile
@@ -1,21 +1,16 @@
-SUBDIRS := sample_01_add sample_02_modinv sample_03_powm sample_04_miller_rabin
+SUBDIRS = \
+	sample_01_add \
+	sample_02_modinv \
+	sample_03_powm \
+	sample_04_miller_rabin
 
-TARGETS := clean kepler maxwell pascal volta turing ampere
+all: $(SUBDIRS)
 
-pick:
-	@echo
-	@echo Please run one of the following:
-	@echo "   make kepler"
-	@echo "   make maxwell"
-	@echo "   make pascal"
-	@echo "   make volta"
-	@echo "   make turing"
-	@echo "   make ampere"
-	@echo
-
-$(TARGETS): $(SUBDIRS)
+.PHONY: clean $(SUBDIRS)
 $(SUBDIRS):
-	make -C $@ $(MAKECMDGOALS)
+	make -C $@
 
-.PHONY: $(TARGETS) $(SUBDIRS)
-
+clean:
+	$(foreach subdir, $(SUBDIRS), \
+	  make -C $(subdir) clean; \
+	)
