--- a/samples/sample_03_powm/Makefile
+++ b/samples/sample_03_powm/Makefile
@@ -7,35 +7,14 @@ ifndef GMP_HOME
   LIB :=
 endif
 
-pick:
-	@echo
-	@echo Please run one of the following:
-	@echo "   make kepler"
-	@echo "   make maxwell"
-	@echo "   make pascal"
-	@echo "   make volta"
-	@echo "   make turing"
-	@echo "   make ampere"
-	@echo
+TARGET := powmo
+SRCFILE := powm_odd.cu
 
+all: $(TARGET)
+
+.PHONY: clean
 clean:
-	rm -f powmo
+	rm -f $(TARGET)
 
-kepler:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_35 powm_odd.cu -o powmo -lgmp
-
-maxwell:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_50 powm_odd.cu -o powmo -lgmp
-
-pascal:
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_60 powm_odd.cu -o powmo -lgmp
-
-volta: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_70 powm_odd.cu -o powmo -lgmp
-
-turing: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_75 powm_odd.cu -o powmo -lgmp
-
-ampere: 
-	nvcc $(INC) $(LIB) -I../../include -arch=sm_80 powm_odd.cu -o powmo -lgmp
-
+$(TARGET): $(SRCFILE)
+	nvcc $(INC) $(LIB) -I../../include -arch=sm_$(CUDA_GENCODE) $< -o $@ -lgmp
