use strict naming for .h|.cuh|.cc|.cu extensions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,9 +52,6 @@ if(${CGBN_BUILD_TESTS})
   file(GLOB_RECURSE TESTER_CU_SRCLIST "${CGBN_TEST_SRCDIR}/*.cu" "${CGBN_TEST_SRCDIR}/*.cuh" "${CGBN_TEST_SRCDIR}/*.h")
   file(GLOB_RECURSE TESTER_SRCLIST "${CGBN_TEST_SRCDIR}/*.cc")
   cuda_add_executable(tester ${TESTER_CU_SRCLIST})
-  if(${CGBN_IS_CHILD_PROJECT})
-    set_target_properties(tester PROPERTIES EXCLUDE_FROM_ALL ON)
-  endif()
   target_sources(tester PRIVATE ${TESTER_SRCLIST})
   target_include_directories(tester PRIVATE "${CGBN_TEST_SRCDIR}")
   target_link_libraries(tester PRIVATE CGBN)
@@ -81,8 +78,8 @@ endif()
 # benchmark
 if(${CGBN_BUILD_BENCHMARK})
   set(CGBN_BENCH_SRCDIR "${PROJECT_SOURCE_DIR}/benchmark")
-  add_executable(gmp_bench EXCLUDE_FROM_ALL ${CGBN_BENCH_SRCDIR}/gmp_tester.cc)
   cuda_add_executable(xmp_bench ${CGBN_BENCH_SRCDIR}/xmp_tester.cu)
+  add_executable(gmp_bench ${CGBN_BENCH_SRCDIR}/gmp_tester.cc)
 
   target_link_libraries(gmp_bench PRIVATE gmp CGBN)
   target_include_directories(gmp_bench PRIVATE "${CGBN_BENCH_SRCDIR}")
@@ -107,6 +104,5 @@ if(${CGBN_BUILD_SAMPLES})
     cuda_add_executable(${_sample_target_} ${_srclist_})
     target_include_directories(${_sample_target_} PRIVATE "${CGBN_INCLUDE_DIR}")
     target_link_libraries(${_sample_target_} PRIVATE CGBN gmp)
-    set_target_properties(${_sample_target_} PROPERTIES EXCLUDE_FROM_ALL ON)
   endforeach()
 endif()
